--- a/ipynb/Distributed Systems and Errors/1 REST.ipynb
+++ b/ipynb/Distributed Systems and Errors/1 REST.ipynb
@@ -65,10 +65,11 @@
    "metadata": {
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "6075bbff",
-    "execution_start": 1649005907608,
-    "execution_millis": 108,
+    "source_hash": "24a5cedb",
+    "execution_start": 1649143845747,
+    "execution_millis": 168,
     "cell_id": "00003-e7a517cd-8f91-4a18-a19a-776ccc7d4168",
+    "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 261
    },
@@ -102,12 +103,12 @@
     "cell_id": "4a11ae406d0d474183685fbc562bb5d1",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "fbe36c4d",
-    "execution_start": 1649005907724,
-    "execution_millis": 8757,
+    "source_hash": "b9078a0b",
+    "execution_start": 1649143845920,
+    "execution_millis": 411921,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 693
+    "deepnote_cell_height": 1188.800048828125
    },
    "source": "from fastapi import FastAPI\n\nimport nest_asyncio\nimport uvicorn\n\napp = FastAPI()\n\n# Payment microservice API definition\n@app.put(\"/retrieve_payment/\")\nasync def retrieve_payment(message: Message):\n    message.event = \"Payment_Done\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Inventory microservice API definition\n@app.put(\"/fetch_goods/\")\nasync def fetch_goods(message: Message):\n    message.event = \"Goods_Fetched\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Shipping microservice API definition\n@app.put(\"/ship_goods/\")\nasync def ship_goods(message: Message):\n    message.event = \"Goods_Shipped\"\n    print(\"EVENT:    \" + message.event)\n    return message\n\n\n# Run API server\nnest_asyncio.apply()\nuvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
    "execution_count": null,
