--- a/ipynb/Distributed Systems and Errors/2 Message.ipynb
+++ b/ipynb/Distributed Systems and Errors/2 Message.ipynb
@@ -46,9 +46,9 @@
     "deepnote_variable_name": "amqp_url",
     "deepnote_variable_value": "",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "845525ea",
-    "execution_start": 1649012553025,
-    "execution_millis": 54608,
+    "source_hash": "e573839e",
+    "execution_start": 1649146279870,
+    "execution_millis": 0,
     "cell_id": "00002-7596e2bc-dbcf-4258-a28c-7e34b1654b68",
     "output_cleared": true,
     "deepnote_cell_type": "input-text"
@@ -71,16 +71,16 @@
    "cell_type": "code",
    "metadata": {
     "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
+    "deepnote_variable_value": "showcase",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "6083972c",
-    "execution_start": 1649012553023,
-    "execution_millis": 54593,
+    "execution_start": 1649146279871,
+    "execution_millis": 0,
     "cell_id": "abfb23b1-57fe-47fc-a6a8-72672142ed4b",
     "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
-   "source": "tenant = 'TEAM10'",
+   "source": "tenant = 'showcase'",
    "execution_count": null,
    "outputs": []
   },
@@ -100,8 +100,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f6465ed8",
-    "execution_start": 1649012553026,
-    "execution_millis": 54606,
+    "execution_start": 1649146279873,
+    "execution_millis": 0,
     "is_code_hidden": true,
     "cell_id": "00003-8ba6ea93-0833-48d3-b5b3-751ec71421a1",
     "output_cleared": true,
@@ -138,8 +138,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "94d1c4be",
-    "execution_start": 1649012553028,
-    "execution_millis": 29,
+    "execution_start": 1649146279875,
+    "execution_millis": 118,
     "cell_id": "00004-f463a11a-5f2d-4054-931f-e6284f90df2f",
     "output_cleared": true,
     "deepnote_cell_type": "code",
@@ -174,8 +174,8 @@
    "metadata": {
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "f8342e48",
-    "execution_start": 1649012553059,
+    "source_hash": "cfe8b09f",
+    "execution_start": 1649146279994,
     "execution_millis": 1031,
     "cell_id": "00005-fff109ad-9258-4c94-ae61-72ae9851b506",
     "output_cleared": true,
@@ -211,9 +211,9 @@
    "metadata": {
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "a9daf20b",
-    "execution_start": 1649012554093,
-    "execution_millis": 752,
+    "source_hash": "b6ca63cf",
+    "execution_start": 1649146281029,
+    "execution_millis": 840,
     "output_cleared": true,
     "cell_id": "00006-223d52fb-9d13-4ad2-99d0-8bcfeacd038f",
     "deepnote_cell_type": "code",
@@ -248,9 +248,9 @@
    "metadata": {
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "430ef540",
-    "execution_start": 1649012554852,
-    "execution_millis": 7983,
+    "source_hash": "9ef3848a",
+    "execution_start": 1649146281857,
+    "execution_millis": 5328568,
     "output_cleared": true,
     "cell_id": "00007-855690d6-72cd-4728-86d0-bda14b42ab95",
     "deepnote_cell_type": "code",
