--- a/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
+++ b/ipynb/Distributed Systems and Errors/3 Message Tracking.ipynb
@@ -48,13 +48,13 @@
     "deepnote_variable_value": "",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "845525ea",
-    "execution_start": 1649012533701,
-    "execution_millis": 1,
+    "execution_start": 1649151902411,
+    "execution_millis": 0,
     "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "amqp_url = ''",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": []
   },
   {
@@ -72,16 +72,16 @@
    "metadata": {
     "cell_id": "70c5e8874e5b48688d0e9e569da214c7",
     "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
+    "deepnote_variable_value": "showcase",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1649012533682,
-    "execution_millis": 17,
+    "source_hash": "ea2f0b89",
+    "execution_start": 1649151902322,
+    "execution_millis": 1,
     "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
-   "source": "tenant = 'TEAM10'",
-   "execution_count": null,
+   "source": "tenant = 'showcase'",
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -102,8 +102,8 @@
     "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "2f31b90",
-    "execution_start": 1649012533700,
-    "execution_millis": 1,
+    "execution_start": 1649151645841,
+    "execution_millis": 265532,
     "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
@@ -128,8 +128,8 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f6465ed8",
-    "execution_start": 1649012533702,
-    "execution_millis": 1,
+    "execution_start": 1649151645843,
+    "execution_millis": 265492,
     "is_code_hidden": true,
     "output_cleared": true,
     "deepnote_cell_type": "code",
@@ -166,8 +166,8 @@
     "cell_id": "06c15c41-7706-45d2-8f47-2cefae08450e",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "94d1c4be",
-    "execution_start": 1649012533705,
-    "execution_millis": 33,
+    "execution_start": 1649151645844,
+    "execution_millis": 38,
     "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 405
@@ -202,9 +202,9 @@
     "cell_id": "049728cffb9e4208a8ed722cd6718d8a",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "d07d0a59",
-    "execution_start": 1649012533738,
-    "execution_millis": 1759,
+    "source_hash": "ec8319e5",
+    "execution_start": 1649151645887,
+    "execution_millis": 1833,
     "output_cleared": true,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 549
@@ -239,12 +239,12 @@
     "cell_id": "dca17cb53cf54dccb564fc4ea8715118",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "f09c4f91",
-    "execution_start": 1649012535502,
-    "execution_millis": 762,
+    "source_hash": "ed632f2a",
+    "execution_start": 1649151647735,
+    "execution_millis": 776,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 297
+    "deepnote_cell_height": 328.20001220703125
    },
    "source": "import pika, pickle\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Define and publish (send) the Order_Placed event\nmessage.event = \"Order_Placed\"\nchannel.basic_publish(exchange=tenant, routing_key=\"order\", body=pickle.dumps(message))\nprint(\"Order_Placed message sent.\")\n\nconnection.close()\n",
    "execution_count": null,
@@ -276,12 +276,12 @@
     "cell_id": "8695a13ad4be4662bee731325e74016e",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "9f1fe116",
-    "execution_start": 1649012536265,
-    "execution_millis": 10766,
+    "source_hash": "57a33493",
+    "execution_start": 1649151648508,
+    "execution_millis": 78352,
     "output_cleared": true,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1323
+    "deepnote_cell_height": 1521.5999755859375
    },
    "source": "import pika, pickle, requests, signal\n\nparams = pika.URLParameters(amqp_url)\nconnection = pika.BlockingConnection(params)\nchannel = connection.channel()\n\n# Order fulfillment tracking microservice callback function\ndef order_fulfillment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    request_data = {\n        \"messageName\": message.event,\n        \"businessKey\": message.businessKey,\n        \"tenantId\": message.tenant,\n    }\n    response = requests.post(camunda_eninge_rest + \"/message\", json=request_data)\n    return\n\n\n# Payment microservice callback function\ndef payment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Payment_Done\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"payment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Inventory microservice callback function\ndef inventory(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Fetched\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"inventory\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Shipment microservice callback function\ndef shipment(channel, method, properties, body):\n    message = pickle.loads(body)\n    print(\"Received \" + str(message))\n    message.event = \"Goods_Shipped\"\n    channel.basic_publish(\n        exchange=tenant, routing_key=\"shipment\", body=pickle.dumps(message)\n    )\n    return\n\n\n# Subscriptions on queues\nchannel.basic_consume(\"order_fulfillment\", order_fulfillment, auto_ack=True)\nchannel.basic_consume(\"order\", payment, auto_ack=True)\nchannel.basic_consume(\"payment\", inventory, auto_ack=True)\nchannel.basic_consume(\"inventory\", shipment, auto_ack=True)\n\n\ndef close_handler(signal, frame):\n    connection.close()\n\n\n# Run consuming server\ntry:\n    signal.signal(signal.SIGINT, close_handler)\n    channel.start_consuming()\nexcept Exception as e:\n    print(e)\n",
    "execution_count": null,
