--- a/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
+++ b/ipynb/Distributed Systems and Errors/4 Pub Sub.ipynb
@@ -47,9 +47,10 @@
     "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "2f31b90",
-    "execution_start": 1648998458432,
-    "execution_millis": 1,
+    "execution_start": 1649148224669,
+    "execution_millis": 43,
     "cell_id": "00001-ab2f5036-834f-40e8-8d20-7edae8009ffe",
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
@@ -70,16 +71,17 @@
    "cell_type": "code",
    "metadata": {
     "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
+    "deepnote_variable_value": "showcase",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1648998458432,
-    "execution_millis": 0,
+    "source_hash": "ea2f0b89",
+    "execution_start": 1649151933119,
+    "execution_millis": 4,
     "cell_id": "4a92ab76-6e3a-4423-b5a7-64f77332e510",
+    "output_cleared": true,
     "deepnote_cell_type": "input-text"
    },
-   "source": "tenant = 'TEAM10'",
-   "execution_count": null,
+   "source": "tenant = 'showcase'",
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -118,8 +120,8 @@
     "cell_id": "f1fdb4464d114a069c76a11964600374",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "5aa21488",
-    "execution_start": 1648998458433,
+    "source_hash": "6d18e6e2",
+    "execution_start": 1649148224713,
     "execution_millis": 7902,
     "output_cleared": true,
     "deepnote_cell_type": "code",
