--- a/ipynb/Distributed Systems and Errors/5 Error.ipynb
+++ b/ipynb/Distributed Systems and Errors/5 Error.ipynb
@@ -27,14 +27,14 @@
     "deepnote_variable_value": "https://digibp.herokuapp.com/engine-rest",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "2f31b90",
-    "execution_start": 1649000503532,
-    "execution_millis": 1386528,
+    "execution_start": 1649151046174,
+    "execution_millis": 1,
     "cell_id": "00001-202066b8-7141-46e5-b302-357031d0ec35",
     "deepnote_cell_type": "input-text"
    },
    "source": "camunda_eninge_rest = 'https://digibp.herokuapp.com/engine-rest'",
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -50,16 +50,16 @@
    "cell_type": "code",
    "metadata": {
     "deepnote_variable_name": "tenant",
-    "deepnote_variable_value": "TEAM10",
+    "deepnote_variable_value": "showcase",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "6083972c",
-    "execution_start": 1649000503482,
-    "execution_millis": 49,
+    "source_hash": "ea2f0b89",
+    "execution_start": 1649152033615,
+    "execution_millis": 1,
     "cell_id": "59d6c2bb-bc62-4e33-aa3f-81de2ab2dbaf",
     "deepnote_cell_type": "input-text"
    },
-   "source": "tenant = 'TEAM10'",
-   "execution_count": null,
+   "source": "tenant = 'showcase'",
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -97,17 +97,23 @@
    "metadata": {
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "5e48d5f6",
-    "execution_start": 1649001341945,
-    "execution_millis": 48611,
+    "source_hash": "69f6c98d",
+    "execution_start": 1649151046176,
+    "execution_millis": 265111,
     "cell_id": "00002-d78e23ff-7eea-4931-86bb-cfc9ee063770",
-    "output_cleared": true,
+    "output_cleared": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 945
+    "deepnote_cell_height": 1565
    },
    "source": "import httpimport, random\n\nwith httpimport.github_repo(\"DigiBP\", \"digibp-camunda-external-python-task\", \"cam\"):\n    import cam\n\n# Initialize worker client\nworker = cam.Client(camunda_eninge_rest)\n\n# Payment microservice callback function\ndef retrievePayment(taskid, response):\n    if random.randint(0, 1):\n        print(\"Payment Done\")\n        worker.complete(taskid)\n    else:\n        print(\"PaymentFailed\")\n        worker.error(taskid, \"PaymentFailed\")\n\n\n# Refund payment microservice callback function\ndef refundPayment(taskid, response):\n    print(\"Refund Payment Done\")\n    worker.complete(taskid)\n\n\n# Inventory microservice callback function\ndef fetchGoods(taskid, response):\n    if random.randint(0, 1):\n        print(\"Goods Fetched\")\n        worker.complete(taskid)\n    else:\n        print(\"OutOfStock\")\n        worker.error(taskid, \"OutOfStock\")\n\n\n# Shipment microservice callback function\ndef shipGoods(taskid, response):\n    print(\"Goods Shipped\")\n    worker.complete(taskid)\n\n\n# Subscriptions on topics\nworker.subscribe(\"retrievePayment\", retrievePayment, tenant)\nworker.subscribe(\"refundPayment\", refundPayment, tenant)\nworker.subscribe(\"fetchGoods\", fetchGoods, tenant)\nworker.subscribe(\"shipGoods\", shipGoods, tenant)\n\n# Run polling server\nworker.polling()\n",
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": "polling subscription: retrievePayment\npolling subscription: refundPayment\npolling subscription: fetchGoods\npolling subscription: shipGoods\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\n200\n200\npolling subscription: fetchGoods\npolling subscription: shipGoods\npolling subscription: refundPayment\n200\npolling subscription: retrievePayment\n200200\n\n200\npolling subscription: shipGoods\npolling subscription: refundPayment\npolling subscription: fetchGoods\n200\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPayment Done\n\n204\npolling subscription: retrievePayment\n200\nGoods Fetched\n\n204\npolling subscription: fetchGoods\n200\nGoods Shipped\n\n204\npolling subscription: shipGoods\n200\npolling subscription: refundPayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: shipGoods\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPaymentFailed\n\n204\npolling subscription: retrievePayment\n200\nPayment Done\n\n204\npolling subscription: retrievePayment\n200\nOutOfStock\n\n204\npolling subscription: fetchGoods\n200\nRefund Payment Done\n\n204\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n200\npolling subscription: retrievePayment\n200\npolling subscription: fetchGoods\n200\npolling subscription: refundPayment\n200\npolling subscription: shipGoods\n",
+     "output_type": "stream"
+    }
+   ],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
